# promptathon-showcase

./: .gitignore  Cargo.toml  README.md  app.html  canister_ids.json  dfx.json  eslint.config.js  icp.yaml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  warmup-og.sh
indexer/: .env.example  README.md  example.ts  package.json  pnpm-lock.yaml  run.ts  submissions.csv  test-special-chars.ts
indexer/src/: ai.ts  canister.ts  csv.ts  extractor.ts  index.ts  indexer.ts  r2.ts  types.ts
public/: icon.avif
public/.well-known/: ic-domains
router_library/: Cargo.toml
router_library/src/: assets.rs  build.rs  lib.rs  mime.rs  router.rs
server/: Cargo.toml  build.rs
server/src/: lib.rs
server/src/app/: app_types.rs  mod.rs
server/src/routes/: index.rs  mod.rs  not_found.rs
server/src/routes/admin/: mod.rs
server/src/routes/api/: mod.rs
server/src/routes/api/apps/: index.rs  mod.rs
server/src/routes/api/apps/_id/: index.rs  mod.rs
server/src/routes/api/search/: index.rs
server/src/routes/app/_id/: index.rs  mod.rs  og.png.rs
server/src/seeds/: mod.rs  seed_001_apps.rs
src/: main.css  main.js  main.tsx  server.ts  types.ts
src/components/: app-detail.tsx  app-gallery.tsx  image-with-skeleton.tsx  promptathon-logo.tsx  search-results.tsx  social-embed.tsx  winners.tsx
src/declarations/: server.did.d.ts  server.did.js
src/hooks/: use-get-app.ts  use-list-apps.ts  use-search-query.tsx  use-search.tsx  use-server.ts
src/lib/: actor.ts  constants.ts
src/routes/: __root.tsx  index.tsx
src/server/: Cargo.toml  (+2 more)
(+26 files in other folders)
