[package]
name = "router_library"
version = "0.0.0"
edition = "2021"

[lib]

[dependencies]
candid = "0.10.19"
ic-asset-certification = "3.0.3"
ic-canister-sig-creation = "1.3.1"
ic-cdk = "0.18.7"
ic-certification = "3.0.3"
ic-http-certification = "3.0.3"
include_dir = { version = "0.7.4", features = ["glob"] }
serde = "1.0"
