[package]
name = "server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.19"
ic-cdk = "0.18.7"
ic-asset-router = "0.1.1" 
ic-rusqlite = { version = "0.4.3", features = ["precompiled"] }
ic-sql-migrate = { version = "0.0.5", features = ["sqlite"] }
include_dir = { version = "0.7.4", features = ["glob"] }
minijinja = "2.8.0"
resvg = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[build-dependencies]
ic-asset-router = "0.1.1" 
ic-sql-migrate = { version = "0.0.5" }
